--- a/unit4/gallery/style.css
+++ b/unit4/gallery/style.css
@@ -24,4 +24,14 @@ a:hover{
 .cover{
     height:300px;
     margin-top:25%;
+    background-image:url("https://www.publicdomainpictures.net/pictures/140000/t2/ark-texture-impasto-color-swirl-.jpg");
+}   
+.col-md-2{
+    height:200px;
+    padding:2em;
+    margin-top:2em;
+}
+h1 .front-logo{
+    color: white;
+    margin: 50px;
 }
