almost finished gallery 2

--- a/unit4/gallery/style.css
+++ b/unit4/gallery/style.css
@@ -24,6 +24,7 @@ a:hover{
 .cover{
     height:300px;
     margin-top:25%;
+    background-size: cover;
     background-image:url("https://www.publicdomainpictures.net/pictures/140000/t2/ark-texture-impasto-color-swirl-.jpg");
 }   
 .col-md-2{
@@ -31,7 +32,21 @@ a:hover{
     padding:2em;
     margin-top:2em;
 }
-h1 .front-logo{
+.front-logo h1{
     color: white;
     margin: 50px;
+}
+.col-md-2 main{
+    height:200px;
+    padding:2em;
+    margin-top:2em;
+}
+.front-nav-1{
+    background-color: #64271b;
+}
+.front-nav-3{
+    background-color: #80598d;
+}
+.front-nav-2{
+    background-color: #354243;
 }
