--- a/unit4/gallery/style.css
+++ b/unit4/gallery/style.css
@@ -36,7 +36,7 @@ a:hover{
     color: white;
     margin: 50px;
 }
-.col-md-2 main{
+.col-md-2{
     height:200px;
     padding:2em;
     margin-top:2em;
