--- a/unit4/gallery3/style.css
+++ b/unit4/gallery3/style.css
@@ -57,3 +57,13 @@ img{
 .text-muted{
     font-size: 20px;
 }
+button{
+    background-color: aqua;
+    border: none;
+}
+.center{
+    text-align: center;
+}
+.black{
+    color: black;
+}
