--- a/FINAL/style.css
+++ b/FINAL/style.css
@@ -27,23 +27,10 @@ main{
     background-size: cover;
     background-image:url("ninja.jpg");
 }
-img{
+.image{
     border-radius: 100%;
     height: 100px;
     width: 100px;
-    
-}
-.backblack{
-    background-color: white;
-}
-.border{
-    border-style: solid;
-    border-color: black;
-    background-color: white;
-}
-.border2{
-    border-color: darkblue;
-    border-style: solid;
 }
 button{
     width: 100%;
@@ -59,7 +46,31 @@ th{
     color: darkblue;
     background-color: yellow;
 }
-table:hover{
-    size: 2000px;
+.stream{
+    width: 300px;
+    height: 150px;
+}
+.stream:hover{
+    height: 440px;
+    width: 900px;
+    transition:
+    height 2s,
+    width 2s;
+}
+.celeb{
+    width: 200px;
+    height: 200px;
+    filter: grayscale(100%);
+    border-style: solid;
+
+}
+.celeb:hover{
+    filter: grayscale(0%);
+    transition:
+    filter 2s;
+}
+.img-thumbnail:hover{
+    border-color:yellow;
+    border-width: 5px;
 }
 
